--- a/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
+++ b/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
@@ -1,9 +1,10 @@
 .app-content {
     width: 100%;
-    padding-bottom: 111px;
+    margin-top: 20px;
+    padding-bottom: 100px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 40px;
 
 
 
