--- a/src/app/features/pages/admin/homeAdmin/home.component.scss
+++ b/src/app/features/pages/admin/homeAdmin/home.component.scss
@@ -49,7 +49,8 @@
 
                 .area-main {
                     width: 100%;
-                    padding-bottom: 60px;
+                    padding-bottom: 90px;
+                    padding: 0 15px;
 
                 }
 
