--- a/src/app/features/pages/admin/produtos/imageDropCarrossel/image-drop-carrossel.component.scss
+++ b/src/app/features/pages/admin/produtos/imageDropCarrossel/image-drop-carrossel.component.scss
@@ -21,7 +21,7 @@
   justify-content: center;
   gap: 5px;
   width: 100%;
-  height: auto;
+  height: 260px;
   cursor: grab;
   user-select: none;
 }
