--- a/src/app/shared/component/utius/utius.component.scss
+++ b/src/app/shared/component/utius/utius.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 140px;
+    width: 150px;
     height: 100%;
     padding: 6px;
     border-radius: 8px;
@@ -33,10 +33,19 @@
 
     cursor: pointer;
 
+    .img {
+        width: 100%;
+        height: 120px;
+        border-radius: 8px;
+        overflow: hidden;
+    }
+
+
     img {
         width: 100%;
-        height: 90px;
-        object-fit: contain;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
     }
 
     .ng-infor {
@@ -133,10 +142,19 @@
 
         cursor: pointer;
 
+        .img {
+            width: 100%;
+            height: 120px;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+
         img {
             width: 100%;
-            height: 110px;
-            object-fit: contain;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
         }
 
         .ng-infor {
