exibindo produto de cada empresa ao clicar no nome da empresa dentro da loja principal

--- a/src/app/features/pages/homeZapdaiLoja/homeZapdai/homeZapdai.component.html
+++ b/src/app/features/pages/homeZapdaiLoja/homeZapdai/homeZapdai.component.html
@@ -17,7 +17,7 @@
             </section>
             <div class="propaganda">
                @for (empresa of produtos; track $index) {
-                    <app-mais-postados [produto]="empresa.produtos" [titulo]="empresa.nomeCompania"></app-mais-postados>
+                    <app-mais-postados [produto]="empresa.produtos" [empresa]="empresa"></app-mais-postados>
                }               
             </div>
         </div>
