--- a/src/app/shared/component/mais-postados/mais-postados.component.scss
+++ b/src/app/shared/component/mais-postados/mais-postados.component.scss
@@ -3,6 +3,7 @@
   gap: 5px;
   display: flex;
   align-items: center;
+  cursor: pointer;
     span{
         font-size:15px;
         color:  #c8c9ca;
