--- a/src/app/shared/component/page-container/page-container.component.scss
+++ b/src/app/shared/component/page-container/page-container.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     overflow: auto;
+    scrollbar-width: thin;
     width: 100%;
     height: 100dvh;
     position: fixed;
