--- a/src/app/features/pages/v1/homeZapdai/homeZapdai.component.html
+++ b/src/app/features/pages/v1/homeZapdai/homeZapdai.component.html
@@ -1,7 +1,7 @@
 <app-header (emitCarrinho)="ativaCarrinho()" [carrinho]="true" class="s" [admin]="false"></app-header>
 <app-mobile-navbar></app-mobile-navbar>
-<div class="area-loja">
-    <div class="main">
+<div   class="area-loja">
+    <div #element class="main">
         <div class="ng-categoria">
             <section class="container-area">
                 <div class="carrossel">
@@ -27,3 +27,7 @@
 @if (ativaCar) {
 <app-carrinho (desbiledCarEmit)="ativaCarrinho()"></app-carrinho>
 }
+ @if (ativo) {
+        <div class="btn"><button (click)="onWindows()"><mat-icon>arrow_upward</mat-icon></button></div>
+
+        }
