--- a/src/app/features/pages/v1/homeZapdai/homeZapdai.component.scss
+++ b/src/app/features/pages/v1/homeZapdai/homeZapdai.component.scss
@@ -1,15 +1,14 @@
 .area-loja {
     .main {
-        height: 100vh;
+        height: calc(100vh - 50px);
         width: 100%;
         overflow-y: auto;
         position: relative;
         scrollbar-width: thin;
-        scrollbar-color: #d2d2;
-        padding-bottom: 50px;
-
+        scrollbar-color: rgba(21, 9, 185, 0.133);
         .ng-categoria {
-            margin-top: 12px;
+            margin-top: 15px;
+            margin: 10px 0;
 
             display: flex;
             flex-direction: column;
@@ -84,3 +83,19 @@
         }
     }
 }
+ .btn {
+            bottom: 0;
+            position: fixed;
+            right: 15px;
+            margin-bottom: 80px;
+
+
+            button {
+                background-color: #8CABFF;
+                padding: 3px;
+                border: 0;
+                border-radius: 5pc;
+                cursor: pointer;
+
+            }
+        }
