--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,12 +23,15 @@
   overflow: hidden;
 }
 
-body {
+html,body {
+  height: 100%;
   font-size: var();
   font-family: Arial, Helvetica, sans-serif;
   font-family: var(family);
   font-style: var(--font-style);
   font-size: 18px;
+    overflow: hidden; 
+
 }
 
 body,
