--- a/src/app/shared/component/mobile-navbar/mobile-navbar.component.scss
+++ b/src/app/shared/component/mobile-navbar/mobile-navbar.component.scss
@@ -9,12 +9,12 @@
   border-top: 1px solid #ddd;
   z-index: 1001;
 
-  button {
+  .btn-nav {
     background: none;
     border: none;
     flex-grow: 1;
     text-align: center;
-    padding: 8px 0;
+    padding: 0;
     color: #ddd;
     font-size: 8px;
     display: flex;
@@ -34,34 +34,37 @@
     }
   }
 
-  .avatar {
-    width: 35px;
-    height: 35px;
-    border-radius: 15px;
+  button {
+    background: none;
+    border: none;
+    flex-grow: 1;
+    text-align: center;
+    padding: 5px 0;
+    color: #ddd;
+    font-size: 8px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     cursor: pointer;
-    margin-right: 20px;
+  }
 
-    img {
-      width: 35px;
-      height: 35px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 1px solid #888;
-    }
+  .avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 1px solid #888;
+
   }
 
   .ng-avatar-icon {
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
     background-color: #ccc;
     border-radius: 50%;
     line-height: 30px;
     text-align: center;
     border: 1px solid #888;
-    margin-right: 20px;
   }
 
 
