Corrigindo icon/avatar navbar mobille user logado/deslogado v02

--- a/src/app/features/pages/homeZapdaiLoja/loja/loja.component.html
+++ b/src/app/features/pages/homeZapdaiLoja/loja/loja.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div class="informacoes">
-    <span class="marca">{{ produto.marca }}</span>
+    <span class="marca">{{ produto.nomeCompania }}</span>
     <h1>{{ produto.productName }}</h1>
     <p class="codigo">Cód.: {{ produto.codigo }}</p>
 
