--- a/src/app/shared/component/header/header.component.scss
+++ b/src/app/shared/component/header/header.component.scss
@@ -506,7 +506,9 @@
 
                 .ng-btn-empresas {
                     display: flex;
+                    align-items: center;
                     width: 160px;
+                    height: 100%;
                     font-size: 14px;
                     justify-content: center;
                     color: #ddd;
