--- a/src/app/features/pages/homeZapdaiLoja/homeZapdai/homeZapdai.component.scss
+++ b/src/app/features/pages/homeZapdaiLoja/homeZapdai/homeZapdai.component.scss
@@ -5,7 +5,7 @@
     }
 
     .main {
-        height: calc(100vh - 58px);
+        height: 100vh;
         width: 100%;
         overflow-y: auto;
         position: relative;
@@ -37,7 +37,7 @@
                     scroll-behavior: smooth;
                     scrollbar-width: none;
                     background-color: #fff;
-                    box-shadow: 0 0  5px rgba(0, 0, 0, 0.08);
+                    box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
 
                 }
 
@@ -67,7 +67,7 @@
     .area-loja {
 
         .main {
-
+            margin-top: 44px;
 
             .ng-categoria {
                 .container-area {
