--- a/src/app/shared/component/mobile-navbar/mobile-navbar.component.scss
+++ b/src/app/shared/component/mobile-navbar/mobile-navbar.component.scss
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 45px;
   background-color: #0d1d3f;
   display: flex;
   justify-content: space-around;
@@ -14,7 +15,6 @@
     border: none;
     flex-grow: 1;
     text-align: center;
-    padding: 0;
     color: #ddd;
     font-size: 8px;
     display: flex;
@@ -39,7 +39,6 @@
     border: none;
     flex-grow: 1;
     text-align: center;
-    padding: 5px 0;
     color: #ddd;
     font-size: 8px;
     display: flex;
