Corrigindo select catagorias page Cad Produtos v03

--- a/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
+++ b/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
@@ -61,6 +61,12 @@
             }
 
 
+            .ng-menu-name {
+                font-size: 12px;
+                font-weight: 550;
+            }
+
+
             .ng-btn:active {
                 transform: scale(0.97);
 
