--- a/src/app/features/pages/homeZapdaiLoja/homeZapdai/homeZapdai.component.scss
+++ b/src/app/features/pages/homeZapdaiLoja/homeZapdai/homeZapdai.component.scss
@@ -5,7 +5,7 @@
     }
 
     .main {
-        height: 100vh;
+        height: calc(100vh - 50px);
         width: 100%;
         overflow-y: auto;
         position: relative;
