--- a/src/app/features/pages/v1/homeZapdai/homeZapdai.component.scss
+++ b/src/app/features/pages/v1/homeZapdai/homeZapdai.component.scss
@@ -1,15 +1,18 @@
 .area-loja {
+    margin-top: 5px;
+    padding: 0;
+
+
     .main {
-        height: calc(100vh - 50px);
+        height: calc(100vh - 58px);
         width: 100%;
         overflow-y: auto;
         position: relative;
         scrollbar-width: thin;
         scrollbar-color: rgba(21, 9, 185, 0.133);
-        .ng-categoria {
-            margin-top: 15px;
-            margin: 10px 0;
 
+        .ng-categoria {
+            margin-top: 20px;
             display: flex;
             flex-direction: column;
             flex: 1;
@@ -83,19 +86,20 @@
         }
     }
 }
- .btn {
-            bottom: 0;
-            position: fixed;
-            right: 15px;
-            margin-bottom: 80px;
+
+.btn {
+    bottom: 0;
+    position: fixed;
+    right: 15px;
+    margin-bottom: 80px;
 
 
-            button {
-                background-color: #8CABFF;
-                padding: 3px;
-                border: 0;
-                border-radius: 5pc;
-                cursor: pointer;
+    button {
+        background-color: #8CABFF;
+        padding: 3px;
+        border: 0;
+        border-radius: 5pc;
+        cursor: pointer;
 
-            }
-        }
+    }
+}
