--- a/src/app/shared/component/mais-postados/mais-postados.component.html
+++ b/src/app/shared/component/mais-postados/mais-postados.component.html
@@ -1,7 +1,7 @@
 <app-modal>
     <div class="titulo" (click)="produtoEmpres(empresa)">
-    <img [src]="empresa.avatar" width="38px" height="28px" alt="">
-    <small>{{empresa.nomeCompania}}</small>
+    <img [src]="empresa?.avatar" width="38px" height="28px" alt="">
+    <small>{{empresa?.nomeCompania}}</small>
   </div>
 
   <div class="carrossel-container">
