--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -4,6 +4,7 @@
     <app-cobrabca></app-cobrabca>
     }
 
+    @if (admin || isVisible) {
     <header class="ng-header" [ngClass]="[admin ? 'admin' : '']">
         <div class="menu-logo"  [ngClass]="[!isVisible ? 'menu-logo-mobile' : '']">
             @if (admin) {
@@ -129,5 +130,6 @@
 
         }
     </header>
+    }
 
 </div>
