Ajustando a rota empresa/produto/ para buscar por idEmpresa

--- a/src/app/shared/component/mais-postados/mais-postados.component.html
+++ b/src/app/shared/component/mais-postados/mais-postados.component.html
@@ -1,5 +1,5 @@
 <app-modal>
-    <div class="titulo" (click)="produtoEmpres(empresa)">
+    <div class="titulo" (click)="produtoEmpres(empresa.idEmpresa)">
     <img [src]="empresa?.avatar" width="38px" height="28px" alt="">
     <small>{{empresa?.nomeCompania}}</small>
   </div>
