--- a/src/app/features/pages/v1/loja/loja.component.scss
+++ b/src/app/features/pages/v1/loja/loja.component.scss
@@ -96,3 +96,59 @@
   font-size: 0.9rem;
   color: #444;
 }
+
+
+/////////
+/// 
+.carrossel-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding: 0;
+}
+
+.scroll-container {
+  border-radius: 3px;
+  flex: 1;
+  /* ocupa o espaço disponível */
+  height: 100%;
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  padding: 6px;
+  scrollbar-width: none;
+  /* Firefox */
+
+
+
+}
+
+.scroll-container::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari e Opera */
+}
+
+.scroll-container app-utius {
+  flex: 0 0 auto;
+  margin-right: 10px;
+}
+
+/* Botões */
+.botoes {
+  display: flex;
+  align-items: center;
+
+  .btn {
+    right: 10px;
+
+    mat-icon {
+      font-size: 23px;
+    }
+  }
+}
+.pt{
+  width:350px;
+  height: 200px;
+}
